<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/introtwo">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:background="@drawable/circle"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="190sp"
        android:layout_height="190sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80sp"
        android:background="@drawable/tech_six"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="70sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/techsixheader"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="30sp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/techsixmain"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>