<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34495e">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mobilecontainer"
        android:layout_marginBottom="120sp">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/namecontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mobilecontainer"
        android:layout_marginBottom="30sp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginEnd="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginStart="30sp"
            android:background="@drawable/edittext"
            android:fontFamily="casual"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="50"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mobilecontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginEnd="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginStart="30sp"
            android:background="@drawable/edittext"
            android:fontFamily="casual"
            android:gravity="center"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pincontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobilecontainer"
        android:layout_centerInParent="true"
        android:layout_marginTop="30sp">

        <EditText
            android:id="@+id/pin"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginEnd="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginStart="30sp"
            android:background="@drawable/edittext"
            android:fontFamily="casual"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="36"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pincontainer"
        android:layout_marginEnd="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/gradient">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statuspanel"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:background="#66BB6A">

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
