<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context="com.rishabh.techsenze.News">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:background="@drawable/dialog">

                <LinearLayout
                    android:id="@+id/videopromo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100sp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/videopromo"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_margin="10sp"
                        android:background="@drawable/greenbutton">

                        <Button
                            android:id="@+id/watch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:onClick="watch"
                            android:text="WATCH"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/dialog">

                <LinearLayout
                    android:id="@+id/registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100sp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/registration"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_margin="10sp"
                        android:background="@drawable/greenbutton">

                        <Button
                            android:id="@+id/register"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:onClick="watch"
                            android:text="REGISTER"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/dialog">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@drawable/border"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/newsone"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/one"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/dialog">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@drawable/border"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/newstwo"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/two"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/dialog">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@drawable/border"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/newsthree"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/three"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/dialog">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@drawable/border"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/newsfour"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/four"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/dialog">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@drawable/border"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/newsfive"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/five"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/dialog">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@drawable/border"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/newssix"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
