<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    android:gravity="center"
    tools:context="com.rishabh.techsenze.Events">

    <LinearLayout
        android:id="@+id/technicalparent"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_margin="10sp"
        android:background="@drawable/dialog"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/technical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:src="@drawable/technical" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:background="#D3D3D3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:paddingLeft="50sp"
                android:text="@string/technical"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nontechnicalparent"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_below="@+id/technicalparent"
        android:layout_margin="10sp"
        android:background="@drawable/dialog"
        android:clickable="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/nontechnical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:src="@drawable/nontechnical" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:background="#D3D3D3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:paddingLeft="50sp"
                android:text="@string/nontechnical"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_below="@+id/nontechnicalparent"
        android:layout_margin="10sp"
        android:background="@drawable/dialog"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:src="@drawable/online" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:background="#D3D3D3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:paddingLeft="50sp"
                android:text="@string/online"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
