<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_developer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34495e"
    tools:context="com.rishabh.techsenze.Developer">

    <LinearLayout
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@drawable/me"
            app:civ_border_color="#FFFF"
            app:civ_border_width="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/picture">

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30sp"
            android:background="@drawable/dialog"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20sp"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="ABOUT ME"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/aboutdeveloper"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20sp"
                        android:layout_marginTop="30sp"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="PURPOSE"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/purpose"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20sp"
                        android:layout_marginTop="30sp"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="CONTACT"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/devemail"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
